Refactor sidebar and handling multi-elements xml files
Now the sidebar shows a list of all avaliable items read from
an XML file. If there are multiple clusters, device types, or
extensions all of them are visible in the list, and user can
select one of them to edit.

Signed-off-by: Arkadiusz Balys <arkadiusz.balys@nordicsemi.no>

--- a/src/app/SidePanel/SidePanel.scss
+++ b/src/app/SidePanel/SidePanel.scss
@@ -3,3 +3,9 @@
  *
  * SPDX-License-Identifier: LicenseRef-Nordic-4-Clause
  */
+
+@import '@nordicsemiconductor/pc-nrfconnect-shared/styles.scss';
+
+.scrollbar {
+    @include scrollbars($gray-50);
+}
